--- a/basics.html
+++ b/basics.html
@@ -55,7 +55,7 @@
         document.getElementById('addTo').innerHTML += x+=z;  // x=x+z;
         document.getElementById('subTo').innerHTML += y-=z;  //y=y-z;
 
-        //Comparison   * ! = not *
+        //Comparison   * ! = not **
         var a=8; b=4; c="4";
         document.getElementById('equal').innerHTML += a==b;
         document.getElementById('equal').innerHTML += b==c;
