--- a/homework-one/simpleCalculations.html
+++ b/homework-one/simpleCalculations.html
@@ -43,10 +43,7 @@
         <p id="ticketNum">Tickets: </p>
         <p id="ticketCost">Cost: $</p>
         <p id="ttCost">Total: $
-            <script>
-                var pizza = 4;
-                pizza;
-            </script>
+           
         </p>
     </section>
     <section>
@@ -99,6 +96,7 @@
         </ul>
         <p id="tips"></p>
 
+        <script src="simplecalc.js"></script>
 </body>
 
 </html>
